--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "texcreate-templates"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 description = "A library to create templates for the texcreate project" 
 license = "MIT" 
@@ -12,5 +12,5 @@ author = "Mustafif Khan"
 [dependencies]
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-texcore = "0.2.4"
+texcore = {version = "0.3.1", features = ["compile"]}
 toml = "0.5.9"
